# json-cpp-kata

./: CMakeLists.txt  README.md
.github/workflows/: pipeline.yml
src/: main.cpp
src/json/: array.cpp  array.h  error.cpp  error.h  json.cpp  json.h  object.cpp  object.h  parser.cpp  parser.h  string_stream.cpp  string_stream.h  types.cpp  types.h  value.cpp  value.h
test/: test_acceptance.cpp  test_istream.cpp
test/data/: simple.json
